// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton applies custom style 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "red",
      "borderRadius": 8,
      "height": 20,
      "opacity": 0.3,
      "width": "100%",
    }
  }
/>
`;

exports[`Skeleton renders correctly 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#cccccc",
      "borderRadius": 8,
      "height": 50,
      "opacity": 0.3,
      "width": 100,
    }
  }
/>
`;
